refactor: simplify command arguments exception